// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksHelper module tests generateHTMLResults success with ignore exceptions 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>

	<meta charset=\\"utf-8\\"/>
	<title> Accessibility Report for Test task</title>

	<style>

		html, body {
			margin: 0;
			padding: 0;
			background-color: #fff;
			font-family: Arial, Helvetica, sans-serif;
			font-size: 16px;
			line-height: 22px;
			color: #333;
		}
		li {
			margin-bottom: 15px;
		}
		h2, h2, p, pre, ul {
			margin-top: 0;
			margin-bottom: 0;
		}
		h2 {
			margin-bottom: 10px;
			font-size: 24px;
			line-height: 24px;
		}
		h2 {
			font-size: 16px;
		}
		pre {
			white-space: pre-wrap;
			overflow: auto;
		}

		.page {
			max-width: 800px;
			margin: 0 auto;
			padding: 25px;
		}

		.counts {
			margin-top: 30px;
			font-size: 20px;
		}
		.count {
			display: inline-block;
			padding: 5px;
			border-radius: 5px;
			border: 1px solid #eee;
		}

		.clean-list {
			margin-left: 0;
			padding-left: 0;
			list-style: none;
		}
		.results-list {
			margin-top: 30px;
		}

		.result {
			padding: 10px;
			border-radius: 5px;
			border: 1px solid #eee;
		}
		.error {
			background-color: #fdd;
			border-color: #ff9696;
		}
		.warning {
			background-color: #ffd;
			border-color: #e7c12b;
		}
		.notice {
			background-color: #eef4ff;
			border-color: #b6d0ff;
		}

	</style>

</head>
<body>

	<div class=\\"page\\">

		<h1>Test task</h1>

		<h2>Accessibility Report For \\"https://govdemo.staging.tmorders.dev/portal/help/index\\"</h2>
		<p>Generated at: Thu Jun 10 2021 18:46:30 GMT+0000 (Coordinated Universal Time)</p>

		

		<div>
			<h4>Exceptions:</h4>
<ul>
		<li style=\\"margin-bottom:0px;\\">WCAG2AA.Principle1.Guideline1_1.1_1_1.H37</li>
		<li style=\\"margin-bottom:0px;\\">WCAG2AA.Principle1.Guideline1_3.1_3_1.H49.AlignAttr</li>
		<li style=\\"margin-bottom:0px;\\">WCAG2AA.Principle1.Guideline1_3.1_3_1.H43.IncorrectAttr</li>
		<li style=\\"margin-bottom:0px;\\">WCAG2AA.Principle1.Guideline1_3.1_3_1.H43.MissingHeaderIds</li>
		<li style=\\"margin-bottom:0px;\\">WCAG2AA.Principle1.Guideline1_3.1_3_1.H43.MissingHeadersAttrs</li>
		<li style=\\"margin-bottom:0px;\\">WCAG2AA.Principle1.Guideline1_3.1_3_1.F92,ARIA4</li>
</ul>
		</div>

		<p class=\\"counts\\">
			<span class=\\"count error\\">1 errors</span>
			<span class=\\"count warning\\">0 warnings</span>
			<span class=\\"count notice\\">0 notices</span>
		</p>

		<ul class=\\"clean-list results-list\\">
			<li class=\\"result error\\">
				<h2>Error: Iframe element requires a non-empty title attribute that identifies the frame.</h2>
				<p>WCAG2AA.Principle2.Guideline2_4.2_4_1.H64.1</p>
				<pre>&lt;iframe style=&quot;position: absolute; top: 0; left: 0; width: 100%; height: 100%;&quot; src=&quot;https://player.vimeo.com/video/398847860?color=ffffff&amp;amp;byline=0&amp;amp;portrait=0&quot; frameborder=&quot;0&quot; allowfullscreen=&quot;&quot;&gt;&lt;/iframe&gt; (select with \\"#orderModal &gt; div &gt; div &gt; div &gt; iframe\\")</pre>
			</li>
		</ul>

	</div>

</body>
</html>
"
`;

exports[`TasksHelper module tests generateHTMLResults success without ignore exceptions 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>

	<meta charset=\\"utf-8\\"/>
	<title> Accessibility Report for Test task</title>

	<style>

		html, body {
			margin: 0;
			padding: 0;
			background-color: #fff;
			font-family: Arial, Helvetica, sans-serif;
			font-size: 16px;
			line-height: 22px;
			color: #333;
		}
		li {
			margin-bottom: 15px;
		}
		h2, h2, p, pre, ul {
			margin-top: 0;
			margin-bottom: 0;
		}
		h2 {
			margin-bottom: 10px;
			font-size: 24px;
			line-height: 24px;
		}
		h2 {
			font-size: 16px;
		}
		pre {
			white-space: pre-wrap;
			overflow: auto;
		}

		.page {
			max-width: 800px;
			margin: 0 auto;
			padding: 25px;
		}

		.counts {
			margin-top: 30px;
			font-size: 20px;
		}
		.count {
			display: inline-block;
			padding: 5px;
			border-radius: 5px;
			border: 1px solid #eee;
		}

		.clean-list {
			margin-left: 0;
			padding-left: 0;
			list-style: none;
		}
		.results-list {
			margin-top: 30px;
		}

		.result {
			padding: 10px;
			border-radius: 5px;
			border: 1px solid #eee;
		}
		.error {
			background-color: #fdd;
			border-color: #ff9696;
		}
		.warning {
			background-color: #ffd;
			border-color: #e7c12b;
		}
		.notice {
			background-color: #eef4ff;
			border-color: #b6d0ff;
		}

	</style>

</head>
<body>

	<div class=\\"page\\">

		<h1>Test task</h1>

		<h2>Accessibility Report For \\"https://govdemo.staging.tmorders.dev/portal/help/index\\"</h2>
		<p>Generated at: Thu Jun 10 2021 18:46:30 GMT+0000 (Coordinated Universal Time)</p>

		

		<div>
			<h4>Exceptions:</h4>
<ul>
		<li style=\\"margin-bottom:0px;\\">None</li>
</ul>
		</div>

		<p class=\\"counts\\">
			<span class=\\"count error\\">1 errors</span>
			<span class=\\"count warning\\">0 warnings</span>
			<span class=\\"count notice\\">0 notices</span>
		</p>

		<ul class=\\"clean-list results-list\\">
			<li class=\\"result error\\">
				<h2>Error: Iframe element requires a non-empty title attribute that identifies the frame.</h2>
				<p>WCAG2AA.Principle2.Guideline2_4.2_4_1.H64.1</p>
				<pre>&lt;iframe style=&quot;position: absolute; top: 0; left: 0; width: 100%; height: 100%;&quot; src=&quot;https://player.vimeo.com/video/398847860?color=ffffff&amp;amp;byline=0&amp;amp;portrait=0&quot; frameborder=&quot;0&quot; allowfullscreen=&quot;&quot;&gt;&lt;/iframe&gt; (select with \\"#orderModal &gt; div &gt; div &gt; div &gt; iframe\\")</pre>
			</li>
		</ul>

	</div>

</body>
</html>
"
`;
